--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-      {% for station in list %}
+      {% for station in bus_stations %}
         <tr>
           <td>{{ station.Name }}</td>
           <td>{{ station.Street }}</td>
@@ -24,24 +24,9 @@
       </tbody>
     </table>
   <div class="pagination">
-{#    <span class="step-links">#}
-{#        {% if list.has_previous %}#}
-{#            <a href="?page=1">&laquo; first</a>#}
-{#            <a href="?page={{ list.previous_page_number }}">previous</a>#}
-{#        {% endif %}#}
-{##}
-{#        <span class="current">#}
-{#            Page {{ list.number }} of {{ list.paginator.num_pages }}.#}
-{#        </span>#}
-{##}
-{#        {% if list.has_next %}#}
-{#            <a href="?page={{ list.next_page_number }}">next</a>#}
-{#            <a href="?page={{ list.paginator.num_pages }}">last &raquo;</a>#}
-{#        {% endif %}#}
-{#    </span>#}
-      {% if list.has_previous %}<a class="button button-primary" href="?page={{ list.previous_page_number }}">⟵</a>{% endif %}
-    <a class="button disabled" href="">{{ list.number }}</a>
-    {% if list.has_next %}<a class="button button-primary" href="?page={{ list.next_page_number }}">⟶</a>{% endif %}
+    {% if prev_page_url %}<a class="button button-primary" href="{{ prev_page_url }}">⟵</a>{% endif %}
+    <a class="button disabled" href="">{{ current_page }}</a>
+    {% if next_page_url %}<a class="button button-primary" href="{{ next_page_url }}">⟶</a>{% endif %}
 </div>
 
 
